tiny fix, with test in inspection, for imports of types in type parameters